--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.tiptap {
+  h1 {
+    font-size: 2.25rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  a {
+    color: #0070f3;
+  }
+
+  ol {
+    padding-left: 1.5rem;
+    list-style: decimal;
+
+    li {
+      line-height: 2.5rem;
+
+      p {
+        margin-left: 0.5rem;
+      }
+    }
+  }
+
+  ul {
+    padding-left: 2rem;
+
+    li {
+      position: relative;
+      line-height: 2.5rem;
+    }
+
+    li::before {
+      content: url(/icons/check.svg);
+      position: absolute;
+      left: -2rem;
+      top: 0.5rem;
+    }
+  }
+}
